--- a/DAY 6 - Javascript/index (1).html
+++ b/DAY 6 - Javascript/index (1).html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="/data-types.js"></script>
+    <script src="/DAY 6 - Javascript/app.js"></script>
 </body>
 </html>
